--- a/index.html
+++ b/index.html
@@ -11,238 +11,182 @@
 </head>
 <body>
 <math-field id="math">
-	\nu
 </math-field>
 <p id="result" class="result"></p>
 
 <div class="chapters" id="prove1">
-	<h4>Cylindrical capacitor prove</h4>
+	<h4>Maxwell’s equations, Four fundamental equations of electromagnetism</h4>
+	<img src="res/Maxwell’s%20equations.png" alt="">
+</div>
+
+<div class="chapters" id="prove2">
+	<h4>Brewster angle</h4>
+	<img src="res/Brewster angle.png" style="width:50%" alt=""/>
 	<p>
-		\(Q = \epsilon_0\phi = \epsilon_0EA = \epsilon_0E4\pi r^2\)<br>
-		\(\rArr E = \dfrac{1}{4\pi\epsilon_0}\dfrac{Q}{r^2}\)<br>
-		\(V = \int Eds = \dfrac{Q}{4\pi\epsilon_0}\int_a^b\dfrac{1}{r^2}dr\)<br>
-		\(= \dfrac{Q}{4\pi\epsilon_0}\Bigg(\dfrac{1}{a}-\dfrac{1}{b}\Bigg) = \dfrac{Q}{4\pi\epsilon_0}\dfrac{b-a}{ab}\)<br>
-		\(q = CV \rArr C = 4\pi\epsilon_0\dfrac{ab}{b-a}\)<br>
+		\(入射角(\theta_{B})+反射角(\theta_{r})=90\degree\)<br>
+		\(n_1 sin(\theta_{B})=n_1 sin(\theta_{r})=n_2 sin(\frac{\pi}{2}-\theta_{B})\)<br>
+		\(=n_2 cos(\theta_{B})\)<br>
+		\(\frac{n_2}{n_1}=tan(\theta_{B})\)<br>
+		\(\theta_{B}=tan^{-1}(\frac{n_2}{n_1})\)<br>
 	</p>
 </div>
 
-<div class="chapters" id="ch23p36">
-	<h4>Chapter 23, Problem 36</h4>
-	<img src="res/ch23p36-1.jpg" alt="img">
+<div class="chapters" id="prove3">
+	<h4>Ordering of magnetic dipole</h4>
+	<img src="res/ordering of magnetic dipole.png" style="width:90%" alt=""/>
 	<p>
-		In Figure, two large, thin metal plates are parallel and close to each other. On their inner faces, the plates have excess surface charge
-		densities of opposite signs and magnitude \(7.00\times10^{22} C/m^2\).
-		In unit-vector notation, what is the electric field at points (a) to the left of the plates, (b) to the right of them, and (c) between
-		them?<br>
+		Paramagnetism 順磁<br>
+		Ferromagnetism 鐵磁<br>
+		Ferrimagnetism 亞鐵磁<br>
+		Antiferromagnetism 反鐵磁
+	</p>
+</div>
+
+
+<div class="chapters" id="q0">
+	<h4>Example 0</h4>
+	<p>
+		The figure shows a wire ring of radius \(a=1.8cm\) that is perpendicular to the general direction of a radially symmetric,
+		diverging magnetic field. The magnetic field at the ring is everywhere of the same magnitude \(B=3.4mT\),
+		and its direction at the ring everywhere makes an angle \(θ=20\degree\) with a normal to the plane of the ring.
+		The twisted lead wires have no effect on the problem. Find the magnitude of the force the field exerts on the ring if the ring carries a
+		current \(i=4.6mA\).<br>
+		<img src="res/q0_img.png" alt="">
 		<br>
-		(a) To the left of the plates: 0<br>
-		(b) To the right of the plates: 0<br>
-		(c) Between the plates:<br>
-		\(\vec E=\Bigg(\dfrac{\sigma}{2\epsilon_0}\Bigg)(-i)+\Bigg(\dfrac{\sigma}{2\epsilon_0}\Bigg)(-i)=\Bigg(\dfrac{\sigma}{\epsilon_0}\Bigg)(-i)\)
-		\(=-\Bigg(\dfrac{7.00\times10^{-22} C/m^2}{8.85\times 10^{-12} C^2/N.m^2}\Bigg)\)
-		\(=-7.91\times10^{-11}\,N/C\)
+		\(dF_h=iB cos\theta ds\)<br>
+		\(dF_y=iB sin\theta ds\)<br>
+		\(F_v=iB sinθ\int ds = 2πaiB sinθ\)<br>
+		\(= 2π(0.018m)(4.6×10^{−3}A)(3.4×10^{−3}T) sin20\degree\)<br>
+		\(= 6.0×10^{−7}N\)
 	</p>
-	<math-field id="ch23p36-1" readonly>
-		-(\frac{\placeholder[a]{7.00\times10^{-22}}}{\placeholder[b]{\epsilon_0}})
-	</math-field>
-	<p class="result"><span id="ch23p36-2"></span>N/C</p>
-	<script>
-		problemInitFunctions.push(function (math) {
-			const q = document.getElementById('ch23p36-1');
-			const result = document.getElementById('ch23p36-2');
-			math.setCalculate(q, result);
-		});
-	</script>
 </div>
 
-<div class="chapters" id="ch23p40">
-	<h4>Chapter 23, Problem 40</h4>
-	<img src="res/ch23p40-1.webp" alt="img">
+<div class="chapters" id="q1">
+	<h4>Example 1</h4>
 	<p>
-		A nonconducting solid sphere has a uniform volume charge density ρ. Let be the vector from the center of the sphere to a general point P
-		within the sphere.<br>
-		(a) Show that the electric field at P is given by \(\vec E=\rho\vec r/3\epsilon_0\) (Note that the result is independent of the radius of the
-		sphere.)<br>
-		(b) A spherical cavity is hollowed out of the sphere, as shown in the figure. Using superposition concepts,
-		show that the electric field at all points within the cavity is uniform and equal to \(\vec E=\rho\vec r/3\epsilon_0\) where is the position
-		vector from the center of the sphere to the center of the cavity.<br>
+		The current carrying wire loop in the figure (a) lies all in one plane and consists of a semicircle of radius 10 cm, a small semicircle with
+		the same center, and two radial lengths. The smaller semicircle is roated out of that plane by angle θ until it is perpendicular to the plane
+		(figure (b)). Figure (c) gives the magnitude of the net magnetic field at the center of curvature versus angle θ.
+		The vertical scale is set by \(B_a=10μT\) and \(B_b=12.0μT\).<br>
+		What is the radius of the smaller semicircle?<br>
+		<img src="res/q1_img.png" alt="">
 		<br>
-		(a) From Gauss’ law, we get
-		\(\vec E(\vec r)=\dfrac{1}{4\pi\epsilon_0} \dfrac{q_{enc}}{r^3}\vec r
-		= \dfrac{1}{4\pi\epsilon_0}\dfrac{(4\pi\rho r^3/3)}{r^3}\vec r = \dfrac{\rho\vec r}{3\epsilon_0}\)
-		(b) The charge distribution in this case is equivalent to that of a whole sphere of charge density ρ plus a smaller sphere of charge density
-		-ρ that fills the void. By superposition :
-		\(\vec E(\vec r) = \dfrac{\rho\vec r}{3\epsilon_0} = \dfrac{-\rho(\vec r-\vec a)}{3\epsilon_0} = \dfrac{\rho\vec a}{3\epsilon_0}\)
+		$$B_i=\frac{\mu_0 i\phi}{4 \pi R} + \frac{\mu_0 i\phi}{4 \pi r}$$
+		$$B^2_f=B^2_z+B^2_y=\frac{\mu_0 i\phi}{4 \pi R} + \frac{\mu_0 i\phi}{4 \pi r}$$
+		$$(\frac{B_i}{B_f})^2=\frac{[(1/R)+(1/r)]^2}{(1/R)^2+(1/r)^2}$$
+		$$\frac{B_i}{B_f}=12/10=1.2$$
+		$$r=R\frac{1\pm 1.2\sqrt{2-1.2^2}}{1.2^2-1}=$$ 2.3cm or 43.1cm<br>
+		Since we require r < R then the acceptable answer is r=2.3cm
 	</p>
 </div>
 
-<div class="chapters" id="ch24p7">
-	<h4>Chapter 24, Problem 7</h4>
+<div class="chapters" id="q2">
+	<h4>Example 2</h4>
 	<p>
-		(a) Using Eq. 24-32, show that the electric potential at a point on the central axis of a thin ring (of charge q and radius R ) and at
-		distance Z from the ring is,<br>
-		\(V=\dfrac{1}{4\pi\epsilon_0}\dfrac{q}{\sqrt{(R^2+z^2)}}\)<br>
-		(b) From this result, derive an expression for the electric field magnitude E at points on the ring’s axis; compare your result with the
-		calculation of E in Module 22-4.<br>
+		A Gaussian surface in the shape
+		of a right circular cylinder with end caps has a radius of 12.0 cm
+		and a length of 80.0 cm. Through one end there is an inward magnetic flux of 25.0mWb. At the other end, there is a uniform magnetic field of
+		1.60mT, normal to the surface, and directed outward.
+		What are the (a) magnitude and (b) direction (inward or outward)
+		of the net magnetic flux through the curved surface?<br>
 		<br>
-		(a) <br>
-		\(r=\sqrt{(R^2+z^2)}\)<br>
-		\(V=\int\dfrac{1}{4\pi\epsilon_0}\dfrac{dq}{r}=\dfrac{1}{4\pi\epsilon_0}\dfrac{1}{\sqrt{(R^2+z^2)}}\int dq\)<br>
-		\(\rArr V=\dfrac{1}{4\pi\epsilon_0}\dfrac{q}{\sqrt{(R^2+z^2)}}\)<br>
-		(b) <br>
-		\(E=-\dfrac{dV}{dz}=-\dfrac{d}{dz}\Bigg(\dfrac{1}{4\pi\epsilon_0}\dfrac{q}{\sqrt{(R^2+z^2)}}\Bigg)\)<br>
-		\(=-\dfrac{1}{4\pi\epsilon_0}\Bigg[-\dfrac{1}{2}(R^2+z^2)^{-3/2}(2z)q\Bigg]\)<br>
-		\(E=\dfrac{1}{4\pi\epsilon_0}\dfrac{qz}{\sqrt{(R^2+z^2)^3}}\)
+		(a)<br>
+		\(∮ \vec B\times d\vec A=0\)<br>
+		\(∮ \vec B\times d\vec A =Φ_1+Φ_2+Φ_C\)<br>
+		\(Φ_2=π(0.120m)^2 (1.60×10^{−3}T)=+7.24×10^{−5}Wb=+72.4μWb\)<br>
+		\(Φ_C=−Φ_1−Φ_2=25.0μWb−72.4μWb=−47.4μWb\)
+		\(|ϕ_C|=47.4μWb\)<br>
+		(b) The minus sign in \(Φ_C\) indicates that the flux is inward through the curved surface.
 	</p>
 </div>
 
-<div class="chapters" id="ch24p17">
-	<h4>Chapter 24, Problem 17</h4>
+<div class="chapters" id="q3">
+	<h4>Example 3</h4>
 	<p>
-		An infinite nonconducting sheet has a surface charge density \(\sigma = +5.80pC/m^2\).<br>
-		(a) How much work is done by the electric field due to the sheet if a particle of charge \(q = +1.60\times10^{-19} C\) is moved from the sheet
-		to a point P at distance \(d=3.56cm\) from the sheet?<br>
-		(b) If the electric potential V is defined to be zero on the sheet, what is V at P ?<br>
+		In above figure, a ray is incident on one face of a triangular glass prism in air. The angle of incidence θ is chosen so that the emerging ray
+		also makes the same angle θ with the normal to the other face. Show that the index of refraction n of the glass prism is given by <br>
+		$$n=\frac{sin\frac{1}{2}(\psi+\phi)}{sin\frac{1}{2}\phi}$$
+		where \(ϕ\) is the vertex angle of the prism and \(\psi\) is the deviation angle, the total angle through which the beam is turned in passing
+		through the prism. (Under these conditions the deviation angle \(\psi\) has the smallest possible value, which is called the angle of minimum
+		deviation.)<br>
+		<img src="res/q3_img.png" style="width: 70%" alt="">
 		<br>
-		(a) The work done by the electric field is
-		\(W = \int_0^f iq_0\vec E\vec ds = q_0\sigma 2\epsilon_0\int_0^d dz = \dfrac{q_0\sigma d} {2\epsilon_0}\)<br>
-		\(= \dfrac{(1.60\times 10^{-19}C)(5.80\times 10^{-12}C/m^2)(0.0356m)}{2(8.85\times 10^{-12}C^2/N.m^2)}\)<br>
-		\(= 1.87\times 10^{-21} J\)<br>
-		(b) Since \(V-V_0 = -\dfrac{W}{q_0} = -\dfrac{-\sigma z}{2\epsilon_0}\) , with V0 set to be zero on the sheet, the electric potential at P
-		is<br>
-		\(V = -\dfrac{\sigma z}{2\epsilon_0} = -\dfrac{(5.80\times 10^{-12} C/m^2)(0.0356 m)}{2(8.85\times 10^{-12} C^2/N.m^2)}\)<br>
-		\(= -1.17\times 10^{-2}\)
+		\(θ_2+\alpha=90\degree\) and \(ϕ+2\alpha=180\degree\)
+		$$θ_2=90\degree−\alpha=90\degree−\frac{1}{2}(180\degree−ϕ)=\frac{ϕ}{2}$$
+		<img src="res/q3_img_1.png" alt=""/>
+		\(\psi=2(θ-θ_2)\)<br>
+		\(\psi=2(θ-\phi/2)\)<br>
+		\(θ=(\phi+\psi)/2\)<br>
+		$$n=\frac{sinθ}{cosθ_2}=\frac{sin\frac{1}{2}(\phi+\psi)}{sin\frac{1}{2}\phi}$$
 	</p>
-	<math-field id="ch24p17-1-1" readonly>
-		\frac{\placeholder[a]{1.60\times 10^{-19}}\placeholder[b]{5.80\times 10^{-12}}\placeholder[c]{0.0356}}{2\epsilon_0}
-	</math-field>
-	<p class="result"><span id="ch24p17-1-2"></span>J</p>
-	<math-field id="ch24p17-2-1" readonly>
-		-\frac{\placeholder[a]{5.80\times 10^{-12}} \placeholder[b]{0.0356}}{2\epsilon_0}
-	</math-field>
-	<p class="result"><span id="ch24p17-2-2"></span>V</p>
-	<script>
-		problemInitFunctions.push(function (math) {
-			const q1 = document.getElementById('ch24p17-1-1');
-			const result1 = document.getElementById('ch24p17-1-2');
-			math.setCalculate(q1, result1);
-			const q2 = document.getElementById('ch24p17-2-1');
-			const result2 = document.getElementById('ch24p17-2-2');
-			math.setCalculate(q2, result2);
-		});
-	</script>
 </div>
 
-<div class="chapters" id="ch24p21">
-	<h4>Chapter 24, Problem 21</h4>
+<div class="chapters" id="q4">
+	<h4>Example 4</h4>
 	<p>
-		A solid copper sphere whose radius is \(1.0cm\) has a very thin surface coating of nickel. Some nickel atoms are radioactive, each atom
-		emitting an electron as it decays.
-		Half of these electrons enter the copper sphere, each depositing \(100keV\) of energy there. The other half of the electrons escape, each
-		carrying away a charge \(-e\).
-		The nickel coating has an activity of \(3.70\times 10^8\) radioactive decays per second. The sphere is hung from a long, nonconducting string
-		and isolated from its surroundings.<br>
-		(a) How long will it take for the potential of the sphere to increase by \(1000 V\) ?<br>
-		(b) How long will it take for the temperature of the sphere to increase by \(5.0 K\) due to the energy deposited by the electrons? The heat
-		capacity of the sphere is \(14 J/K\).<br>
+		he function \(ψ(x)\) displayed in Eq. 38−27 can describe a free particle, for which the potential energy is \(U(x)=0\) in Schrödinger's
+		equation (Eq. 38-19). Assume now that
+		\(U(x)=U_0 = a\) constant in that equation. Show that Eq. 38−27 is a solution of Schrödinger's equation, with
+		$$k=\frac{2\pi}{h}\sqrt{2m(E-U_0)}$$
+		giving the angular wave number k of the particle.<br>
 		<br>
-		(a)
-		\(Q = \dfrac{1}{4\pi\epsilon_0}R\times V\)<br>
-		\(T = \dfrac{Q}{e/2\times t} = \dfrac{(R\times V)/(4\pi\epsilon_0)}{e/2\times t}\)
+		$$\frac{d^2\psi}{dx^2}+\frac{8\pi^2m}{h^2}[E-U_0]\psi=0$$
+		$$\psi\rArr\psi_0e^{dx}$$
+		$$\frac{d^2\psi}{dx^2}=-k^2\psi_0e^{dx}=-k^2\psi$$
+		$$-k^2\psi+\frac{8\pi^2m}{h^2}[E-U_0]\psi=0$$
+		$$k=\sqrt{\frac{8\pi^2m}{h^2}[E-U_0]}=\frac{2\pi}{h}\sqrt{2m[E-U_0]}$$
 	</p>
-	<math-field id="ch24p21-1-1" readonly>
-		\frac{(\placeholder[a]{0.01}*\placeholder[b]{1000})/(1/4\pi\epsilon_0)}{1.60217662\times10^{-19}/2\times\placeholder[c]{3.7\times10^{8}}}
-	</math-field>
-	<p class="result"><span id="ch24p21-1-2"></span>sec</p>
-	<math-field id="ch24p21-2-1" readonly>
-		\frac{(\placeholder[a]{5}\times\placeholder[b]{14})}{(1.60217662\times10^{-19}\times\placeholder[c]{1\times10^{5}})/2\times\placeholder[d]{3.7\times10^{8}}}
-	</math-field>
-	<p class="result"><span id="ch24p21-2-2"></span>sec</p>
-	<script>
-		problemInitFunctions.push(function (math) {
-			const q1 = document.getElementById('ch24p21-1-1');
-			const result1 = document.getElementById('ch24p21-1-2');
-			math.setCalculate(q1, result1);
-			const q2 = document.getElementById('ch24p21-2-1');
-			const result2 = document.getElementById('ch24p21-2-2');
-			math.setCalculate(q2, result2);
-		});
-	</script>
 </div>
 
-<div class="chapters" id="ch24p55">
-	<h4>Chapter 24, Problem 55</h4>
-	<img src="res/ch24p55-1.png" alt="img">
+<div class="chapters" id="q5">
+	<h4>Example 5</h4>
 	<p>
-		The above figure shows three circular, nonconducting arcs of radius R=8.50 cm. The charges on the arcs are
-		\(q_1 = 4.52 pC, q_2 = −2.00q_1,q_3 = +3.00q_1\).<br>
-		With \(V=0\) at infinity, what is the net electric potential of the arcs at the common center of curvature?<br>
+		The coil in the figure carries current i=1.88A in the direction indicated, is parallel to an xz plane, has 3 turns and an area of
+		\(3.78×10^{-3}m²\), and lies in a uniform magnetic field \(B=(2.36\hat{i}-2.77\hat{j}-4.88\hat{k})mT\).<br>
+		(a) What is the magnetic potential energy of the coil-magnetic field system?<br>
+		(b) What is the magnetic torque (in unit-vector notation) on the coil?<br>
 		<br>
-		\(V = \dfrac{1}{4\pi\epsilon_0}\dfrac{q_1-2q_1+3q_1}{R}\)<br>
-		\(= \dfrac{1/4\pi\epsilon_0}{8.5\times 10^{-2}} = 0.956V\)
+		(a) By right-hand \(\vec{\mu}\) is in \(-y\) direction.<br>
+		\(\vec{\mu}=(NiA)(-\hat{j})\)<br>
+		\(=-(3)(1.88A)(3.78x10^{-3}m²)\)<br>
+		\(=-(0.0213A\times m²)\hat{j}\)<br>
+		The corresponding magnetic energy is<br>
+		\(U=-\vec{\mu}\times \vec{B} = -\mu_y \times B_y\)<br>
+		\(=-(-0.0213A \times m²) \times (-2.77 \times 10^{-3}T)\)<br>
+		\(=-5.91 \times 10^{-5}J\)<br>
+		<br>
+		(b) Using the fact that<br>
+		\(\hat{j} \times \hat{i} = 0, \hat{j} \times \hat{j} = 0, and\hat{j} \times\hat{k}=\hat{i}\)<br>
+		\(\vec{\tau} = \vec{\mu} \times \vec{B} = \mu_y B_z \hat{i} - \mu_y B_x \hat{k}\)<br>
+		\(=(-0.0213 A\times m^ 2)(-2.36\times 10^{-3} T)\hat{i}-(-0.0213A \times m^2) (4.88\times 10^{-3} T)\hat{k}\)<br>
+		\(= (10.4 \times 10^{-5} N\times m)\hat{i} +(5.03\times 10^{-5} N\times m)\hat{k}\)<br>
 	</p>
-	<math-field id="ch24p55-1-1" readonly>
-		\frac{1}{4\pi\epsilon_0}\frac{\placeholder[a]{2\times4.52\times10^{-12}}}{\placeholder[b]{8.5\times 10^{-2}}}
-	</math-field>
-	<p class="result"><span id="ch24p55-1-2"></span>V</p>
-	<script>
-		problemInitFunctions.push(function (math) {
-			const q = document.getElementById('ch24p55-1-1');
-			const result = document.getElementById('ch24p55-1-2');
-			math.setCalculate(q, result);
-		});
-	</script>
 </div>
 
-<div class="chapters" id="ch25p5">
-	<h4>Chapter 25, Problem 5</h4>
-	<img src="res/ch25p5-1.png" alt="img">
-	<p>
-		The capacitor in Fig. 25−25 has a capacitance of 25μ and is initially uncharged.
-		The battery provides a potential difference of 120 V.
-		After switch S is closed, how much charge will pass through it?<br>
-		<br>
-		\(q = CV\)<br>
-		\(= 25\times 10^{-6}\times 120 = 3.0\times 10^{-3}C\)<br>
-	</p>
-	<math-field id="ch25p5-1-1" readonly>
-		\placeholder[a]{25\times 10^{-6}}\times\placeholder[b]{120}
-	</math-field>
-	<p class="result"><span id="ch25p5-1-2"></span>C</p>
-	<script>
-		problemInitFunctions.push(function (math) {
-			const q = document.getElementById('ch25p5-1-1');
-			const result = document.getElementById('ch25p5-1-2');
-			math.setCalculate(q, result);
-		});
-	</script>
+<div id="others">
+	<img src="res/image (2).png" alt=""/>
+	<img src="res/image (3).png" alt=""/><br><br>
+	<img src="res/image (4).png" alt=""/>
+	<img src="res/image (5).png" alt=""/><br><br>
+	<img src="res/image (6).png" alt=""/>
+	<img src="res/image (7).png" alt=""/><br><br>
+	<img src="res/image (8).png" alt=""/>
+	<img src="res/image (9).png" alt=""/><br><br>
+	<img src="res/image (10).png" alt=""/>
+	<img src="res/image (11).png" alt=""/><br><br>
+	<img src="res/image (12).png" alt=""/>
+	<img src="res/image (13).png" alt=""/><br><br>
+	<img src="res/image (14).png" alt=""/>
+	<img src="res/image (15).png" alt=""/><br><br>
+	<img src="res/image (16).png" alt=""/>
+	<img src="res/image (17).png" alt=""/><br><br>
+	<img src="res/image (18).png" alt=""/>
+	<img src="res/image (19).png" alt=""/><br><br>
+	<img src="res/image (20).png" alt=""/>
+	<img src="res/image (21).png" alt=""/><br><br>
+	<img src="res/image (22).png" alt=""/>
+	<img src="res/image (23).png" alt=""/><br><br>
 </div>
 
-<!--<div class="chapters" id="ch25p10">-->
-<!--	<h4>Chapter 25, Problem 10</h4>-->
-<!--	<img src="res/ch25p10-1.png" alt="img">-->
-<!--	<p>-->
-<!--	</p>-->
-<!--	<math-field id="ch25p10-1-1" readonly>-->
-<!--	</math-field>-->
-<!--	<p class="result"><span id="ch25p10-1-2"></span></p>-->
-<!--	<script>-->
-<!--		problemInitFunctions.push(function (math) {-->
-<!--			const q = document.getElementById('ch25p10-1-1');-->
-<!--			const result = document.getElementById('ch25p10-1-2');-->
-<!--			math.setCalculate(q, result);-->
-<!--		});-->
-<!--	</script>-->
-<!--</div>-->
-
-<div class="spacer"></div>
-
-<!--<script id="result" type="math/tex; mode=text"></script>-->
-
-<!--<script type="math/tex; mode=text">-->
-<!--	= a-->
-<!--	\left( x - \frac{-b + \sqrt {b^2-4ac}}{2a} \right)-->
-<!--	\left( x - \frac{-b - \sqrt {b^2-4ac}}{2a} \right)-->
-<!--</script>-->
 </body>
 </html>
